# knowledge-base-qa-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  handoff.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
app/: audit.py  document_lifecycle.py  main.py  provider_budget.py  provider_telemetry.py  runtime_settings.py  source_access.py
app/answer/: __init__.py  citations.py  context_assembly.py  providers.py  query_router.py  service.py
app/api/: admin_settings.py  audit.py  auth.py  chat.py  dependencies.py  documents.py  evals.py  feedback.py  graph.py  health.py  imports.py  indexing.py  jobs.py  mindmap.py  provider_observability.py  search.py  sources.py  system_status.py  ui.py
app/auth/: __init__.py  sessions.py
app/background_jobs/: __init__.py  service.py  worker.py
app/core/: config.py  database.py  database_urls.py
app/evals/: __init__.py  cases.py  default_seed_cases.json  reporting.py  runner.py  service.py
docs/: USAGE.md  index.html
migrations/: env.py
ops/: backup-restore.md  deploy.md  env.production.example  live-answer-acceptance.md  real-content-acceptance-cases.json
scripts/: deploy_production.sh  generate_eval_cases.py  prepare_real_content.py  real_content_acceptance.py  rebuild_index.py  run_background_worker.py  run_evals.py  scp_knowledge_files_to_server.sh  seed_concept_graph.py  seed_eval_cases.py  seed_sample_docs.py  validate_deploy_env.py
tests/: conftest.py
(+154 files in other folders)
