[project]
name = "knowledge-base-qa-bot"
version = "0.1.0"
description = "Knowledge Base Q&A product with Postgres, pgvector, and grounded citations"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "markdownify>=0.13",
  "openai>=1.0",
  "pgvector>=0.3",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pypdf>=4.3",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "sse-starlette>=2.1",
  "tiktoken>=0.8",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
